fixed alignment again and added animation

--- a/home.css
+++ b/home.css
@@ -10,34 +10,38 @@ body{
 
 .top-section{
     position:absolute;
-    top:0%;
-    height: 10%;
-    width:99%;
-
+    top:0vh;
+    height: 10vh;
+    padding-inline: 10px;
 }
 
 .middle{
     
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 50vh;
+    left: 50vw;
     transform: translate(-50%, -50%);
-    padding: 10px;
     text-align:center;
 }
 
 
 h1{
+    
     font-size: 50px;
+    font-family: serif;
+    padding-inline: 10px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid;
+    margin-bottom: 0px;
+    font-weight:700; 
+    
 }
 
-.bottom-section{
-    position:absolute;
-    display: inline-block;
-    bottom:0;
-    height: 10%;
-    width:99%;
+h1:hover{
+    animation: 5s linear 0s infinite running borderGrow;
 }
+
+
 
 .main-content{
 
@@ -51,14 +55,29 @@ text-decoration: none !important;
 }
 
 .contact{
-    float:left;
+    position:absolute;
+    bottom:0vh;
+    height: 10vh;
+    width:20vw;
+    
 }
 
 .view-project{
-    float:right;
-    text-align:center;
-    
+    text-align:right;
+    position:absolute;
+    bottom:0;
+    right:0;
+    height: 10vh;
+    width:50vw;
+    padding-right: 5%;
     color:rgb(228, 210, 210);
     
 }
 
+@keyframes borderGrow{
+    from{border-bottom: solid;}
+    30%{border-right: solid;}
+    50%{border-top: solid;}
+    70%{border-left: solid; background-color: rgb(45, 41, 41);}
+    to{border-bottom: solid;}
+}
